--- a/profile8.html
+++ b/profile8.html
@@ -71,25 +71,24 @@
           <br><br><br>
         <div class="row gy-4">
 
-          <div class="col-lg-4">
+          <div class="col-lg-2">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
-                <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" width=900px height=400px  style="border-radius:25px">
 
               </div>
               <div class="swiper-pagination"></div>
             </div>
           </div>
 
-          <div class="col-lg-7">
+          <div class="col-lg-8">
             <div class="portfolio-info">
               <h3>Get to know your secretariat</h3>
             </div>
               <div class="portfolio-info">
               <h2>About Alaxander Joseph</h2>
               <p>
-                **Description Currently Unavailable**
+                **Description and Photo Currently Unavailable**
               </div>
           </div>
 
