--- a/profile5.html
+++ b/profile5.html
@@ -28,6 +28,20 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
+  <script
+  src="https://code.jquery.com/jquery-3.3.1.js"
+  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+  crossorigin="anonymous">
+</script>
+<script> 
+  $(function(){
+    $("#header").load("header.html"); 
+    $("#footer").load("footer.html"); 
+  });
+  </script> 
+  <!-- Template Main CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
+
   <!-- =======================================================
   * Template Name: Vesperr - v4.7.0
   * Template URL: https://bootstrapmade.com/vesperr-free-bootstrap-template/
@@ -37,44 +51,18 @@
 </head>
 
 <body>
-  <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top d-flex align-items-center">
-    <div class="container d-flex align-items-center justify-content-between">
-
-      <div class="logo">
-        <h1><a href="index.html">BCMUN</a></h1>
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-      </div>
-
-      <nav id="navbar" class="navbar">
-        <ul>
-          <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-          <li><a class="nav-link scrollto active" href="https://eu.jotform.com/form/221957349386066">Staffing Application Form</a></li>
-          <li><a class="nav-link scrollto active" href="committees.html">Committees</a></li>
-          <li><a class="nav-link scrollto active" >Schedule (Comming Soon)</a></li>
-          <li><a class="nav-link scrollto active" >Delegate Registration (Comming Soon)</a></li>
-
-          
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
-
-    </div>
-  </header><!-- End Header -->
+  <div id="header"></div>
     <!-- ======= Portfolio Details Section ======= -->
     <center>
     <div data-aos="fade-up" data-aos-delay="100">
     <section id="portfolio-details" class="portfolio-details">
       <div class="container" data-aos="fade-down" data-aos-delay="100">
-          <br><br><br>
+        <br>  
         <div class="row gy-9">
-
+          
           <div class="col-lg-3">
             <div class="portfolio-details-slider swiper">
-              <br>
               <div class="swiper-wrapper align-items-center">
-                <br><br><br>
                 <img src="./assets/img/team/t1.png" width=900px height=340px  style="border-radius:25px">
 
               </div>
