--- a/header.html
+++ b/header.html
@@ -12,7 +12,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
           <li><a class="nav-link scrollto active" href="committees.html">Committees</a></li>
-          <li><a class="nav-link scrollto active" target="_blank" rel="noopener noreferrer" href="https://2eb8694f09b26520304b-ethan8eight-gmailcom.vercel.app/create">MUN Web Conference Feature</a></li>
+          <li><a class="nav-link scrollto active" target="_blank" rel="noopener noreferrer" href="delegate.html">Join a Scheduled Meeting</a></li>
           <li><a class="nav-link scrollto active" >Schedule (Comming Soon)</a></li>
           <li><a class="nav-link scrollto active" >Delegate Registration (Comming Soon)</a></li>
 
