--- a/delegate.html
+++ b/delegate.html
@@ -46,7 +46,7 @@
             <ul>
               <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
               <li><a class="nav-link scrollto active" href="committees.html">Committees</a></li>
-              <li><a class="nav-link scrollto active"  href="delegate.html">Join a Scheduled Meeting</a></li>
+              <li><a class="nav-link scrollto active"  href="delegate.html">Meeting Rooms</a></li>
               <li><a class="nav-link scrollto active" >Schedule (Comming Soon)</a></li>
               <li><a class="nav-link scrollto active" >Delegate Registration (Comming Soon)</a></li>
     
