--- a/header.html
+++ b/header.html
@@ -12,8 +12,8 @@
         <ul>
           <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
           <li><a class="nav-link scrollto active" href="committees.html">Committees</a></li>
-          <li><a class="nav-link scrollto active" target="_blank" rel="noopener noreferrer" href="delegate.html">Join a Scheduled Meeting</a></li>
-          <li><a class="nav-link scrollto active" >Schedule (Comming Soon)</a></li>
+          <li><a class="nav-link scrollto active" href="delegate.html">Meeting Rooms</a></li>
+          <li><a class="nav-link scrollto active" href="coaching.html">BCMUN Coaching</a></li>
           <li><a class="nav-link scrollto active" >Delegate Registration (Comming Soon)</a></li>
 
           
