--- a/options.html
+++ b/options.html
@@ -46,7 +46,7 @@
             <ul>
               <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
               <li><a class="nav-link scrollto active" href="committees.html">Committees</a></li>
-              <li><a class="nav-link scrollto active" target="_blank" rel="noopener noreferrer" href="options.html">Join a Scheduled Meeting</a></li>
+              <li><a class="nav-link scrollto active" href="options.html">Meeting Rooms</a></li>
               <li><a class="nav-link scrollto active" >Schedule (Comming Soon)</a></li>
               <li><a class="nav-link scrollto active" >Delegate Registration (Comming Soon)</a></li>
     
@@ -70,21 +70,21 @@
     <center>
     <h1>Current Available Meeting Rooms</h1>
     </center>
-    <br><br><br>
-    </a><label style="position:relative; left:20%">Staffing Interview Rooms</label>
-    <label style="position:relative; left:30%">Staff Training Rooms </label>    
+    <br><br><br><br><br>
+    </a><label style="position:relative; left:25%">Staffing Interview Rooms</label>
+    <label style="position:relative; left:32.5%">Staff Training Rooms </label>    
     <label style="position:relative; left:40%">Secretariat Meeting Rooms </label> <br><br>
-    <a href="https://2eb8694f09b26520304b-ethan8eight-gmailcom.vercel.app/7e954fe9-c68e-49f5-a2a1-06a7011bbab8" target="_blank" rel="noopener noreferrer"><label style="position:relative; left:25%">Room 1</label></a>
-    <a href="https://2eb8694f09b26520304b-ethan8eight-gmailcom.vercel.app/6f60dd0c-33c4-4953-8ffd-534dbe442ee6" target="_blank" rel="noopener noreferrer"><label style="position:relative; left:44%">Room 1 </label></a>    
-    <a href="https://2eb8694f09b26520304b-ethan8eight-gmailcom.vercel.app/ea2873cb-794c-491d-a82b-909e25e55675" target="_blank" rel="noopener noreferrer"><label style="position:relative; left:63%">Room 1 </label></a> <br>
-    <a href="https://2eb8694f09b26520304b-ethan8eight-gmailcom.vercel.app/43c95159-8228-40bb-8313-743f0d7b384d" target="_blank" rel="noopener noreferrer"><label style="position:relative; left:25%">Room 2</label></a>
-    <a href="https://2eb8694f09b26520304b-ethan8eight-gmailcom.vercel.app/0890bb3d-c16e-406a-a5bb-e5bd30dcf773" target="_blank" rel="noopener noreferrer"><label style="position:relative; left:44%">Room 2 </label></a>    
-    <a href="https://2eb8694f09b26520304b-ethan8eight-gmailcom.vercel.app/778eb9a6-18cd-45ef-b1b8-9a24cbe82fec" target="_blank" rel="noopener noreferrer"><label style="position:relative; left:63%">Room 2 </label></a> <br>
-    <a href="https://2eb8694f09b26520304b-ethan8eight-gmailcom.vercel.app/65fe6829-6d0c-4849-837f-415a205ba0c0" target="_blank" rel="noopener noreferrer"><label style="position:relative; left:25%">Room 3</label></a>
-    <a href="https://2eb8694f09b26520304b-ethan8eight-gmailcom.vercel.app/2f221c3d-e982-4b34-bf67-887c58e2ba63" target="_blank" rel="noopener noreferrer"><label style="position:relative; left:44%">Room 3 </label></a>    
-    <a href="https://2eb8694f09b26520304b-ethan8eight-gmailcom.vercel.app/dc7c6d80-3e42-425a-91ee-cfe1945669e7" target="_blank" rel="noopener noreferrer"><label style="position:relative; left:63%">Room 3 </label></a> <br>
-    <a href="https://2eb8694f09b26520304b-ethan8eight-gmailcom.vercel.app/855eb1d7-37dc-4e6f-9fa4-034f90d5d681" target="_blank" rel="noopener noreferrer"><label style="position:relative; left:25%">Room 4</label></a>
-    <a href="https://2eb8694f09b26520304b-ethan8eight-gmailcom.vercel.app/8b1a3936-41a3-4d2a-85d9-69959bfef0e7" target="_blank" rel="noopener noreferrer"><label style="position:relative; left:44%">Room 4 </label></a>    
-    <a href="https://2eb8694f09b26520304b-ethan8eight-gmailcom.vercel.app/8796a327-1f14-495f-82a8-e49501061869" target="_blank" rel="noopener noreferrer"><label style="position:relative; left:63%">Room 4 </label></a> <br>
+    <a href="https://2eb8694f09b26520304b-ethan8eight-gmailcom.vercel.app/7e954fe9-c68e-49f5-a2a1-06a7011bbab8" target="_blank" rel="noopener noreferrer"><label style="position:relative; left:29%">Room 1</label></a>
+    <a href="https://2eb8694f09b26520304b-ethan8eight-gmailcom.vercel.app/6f60dd0c-33c4-4953-8ffd-534dbe442ee6" target="_blank" rel="noopener noreferrer"><label style="position:relative; left:43%">Room 1 </label></a>    
+    <a href="https://2eb8694f09b26520304b-ethan8eight-gmailcom.vercel.app/ea2873cb-794c-491d-a82b-909e25e55675" target="_blank" rel="noopener noreferrer"><label style="position:relative; left:57%">Room 1 </label></a> <br>
+    <a href="https://2eb8694f09b26520304b-ethan8eight-gmailcom.vercel.app/43c95159-8228-40bb-8313-743f0d7b384d" target="_blank" rel="noopener noreferrer"><label style="position:relative; left:29%">Room 2</label></a>
+    <a href="https://2eb8694f09b26520304b-ethan8eight-gmailcom.vercel.app/0890bb3d-c16e-406a-a5bb-e5bd30dcf773" target="_blank" rel="noopener noreferrer"><label style="position:relative; left:43%">Room 2 </label></a>    
+    <a href="https://2eb8694f09b26520304b-ethan8eight-gmailcom.vercel.app/778eb9a6-18cd-45ef-b1b8-9a24cbe82fec" target="_blank" rel="noopener noreferrer"><label style="position:relative; left:57%">Room 2 </label></a> <br>
+    <a href="https://2eb8694f09b26520304b-ethan8eight-gmailcom.vercel.app/65fe6829-6d0c-4849-837f-415a205ba0c0" target="_blank" rel="noopener noreferrer"><label style="position:relative; left:29%">Room 3</label></a>
+    <a href="https://2eb8694f09b26520304b-ethan8eight-gmailcom.vercel.app/2f221c3d-e982-4b34-bf67-887c58e2ba63" target="_blank" rel="noopener noreferrer"><label style="position:relative; left:43%">Room 3 </label></a>    
+    <a href="https://2eb8694f09b26520304b-ethan8eight-gmailcom.vercel.app/dc7c6d80-3e42-425a-91ee-cfe1945669e7" target="_blank" rel="noopener noreferrer"><label style="position:relative; left:57%">Room 3 </label></a> <br>
+    <a href="https://2eb8694f09b26520304b-ethan8eight-gmailcom.vercel.app/855eb1d7-37dc-4e6f-9fa4-034f90d5d681" target="_blank" rel="noopener noreferrer"><label style="position:relative; left:29%">Room 4</label></a>
+    <a href="https://2eb8694f09b26520304b-ethan8eight-gmailcom.vercel.app/8b1a3936-41a3-4d2a-85d9-69959bfef0e7" target="_blank" rel="noopener noreferrer"><label style="position:relative; left:43%">Room 4 </label></a>    
+    <a href="https://2eb8694f09b26520304b-ethan8eight-gmailcom.vercel.app/8796a327-1f14-495f-82a8-e49501061869" target="_blank" rel="noopener noreferrer"><label style="position:relative; left:57%">Room 4 </label></a> <br>
 </body>
 </html>
