--- a/header.html
+++ b/header.html
@@ -12,9 +12,9 @@
         <ul>
           <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
           <li><a class="nav-link scrollto active" href="committees.html">Committees</a></li>
-          <li><a class="nav-link scrollto active" href="delegate.html">Meeting Rooms</a></li>
-          <li><a class="nav-link scrollto active" href="coaching.html">BCMUN Coaching</a></li>
+          <li><a class="nav-link scrollto active" href="https://eu.jotform.com/form/221957349386066">Staff Applications</a></li>
           <li><a class="nav-link scrollto active" >Delegate Registration (Comming Soon)</a></li>
+          <li><a class="nav-link scrollto active" href="delegate.html">Conference Video-Call Rooms</a></li>
 
           
         </ul>
