--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
-          <h1 data-aos="fade-up">BCMUN has announced its second iteration</h1>
-          <h2 data-aos="fade-up" data-aos-delay="400">Staffing applications now open!</h2>
+          <h1 data-aos="fade-up">BCMUN has opened delegate registration</h1>
+          <h2 data-aos="fade-up" data-aos-delay="400">Conference Dates: January 21th and 22nd</h2>
           <div data-aos="fade-up" data-aos-delay="800">
-            <a href="https://eu.jotform.com/form/221957349386066" class="btn-get-started scrollto">Apply to staff</a>
+            <a href="https://form.jotform.com/221977001120039" class="btn-get-started scrollto">Register here</a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left" data-aos-delay="200">
@@ -288,128 +288,27 @@
         </div>
 
         <div class="row content">
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="150">
+          <div class="" data-aos="fade-up" data-aos-delay="150">
             <p>
               <center>
-                Our mission is to provide quality online and in-person Model United Nations Conferences. This is our second official itteration and we are so excited to meet new delegates and be reunited with those who attend last year's conference.
-              </center>
+                BCMUN is an established Model United Nations conference based in British Columbia, Canada. Our mission is to provide both high-quality online and in-person Model United Nations Conferences for free! As we announce BCMUN2023 we are so excited to meet new delegates and reunite with those who have attended our past conferences. If you have any questions please feel free to contact us, either through email, or through our instagram linked below. We hope that our conference can inspire a new generation of politically-passionate individuals and look forward to seeing you all soon!              </center>
             </p>
             <div class="contact-about">
               <div class="social-links">
                 <center>
-                <a href="mailto:zmunsecretary@gmail.com" class="btn-learn-more">Email Us</a>
+                <a href="mailto:zmunconference@gmail.com" class="btn-learn-more">Email</a>
+                <a href="https://www.instagram.com/bcmun2022/" class="btn-learn-more">Instagram</a>
                   </center>
               </p>
               </div>
             </div>
           </div>
-          <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-up" data-aos-delay="300">
-            <p>
-              <center>
-              We also recognize that our conference is taking place during a time of war and would encourage you to help. We have provided a donation link below that links to the UN Ukraine Humanitarian Fund. Thanks for the consideration and have a great day!
-              </center>
-           </p>
-            <center>
-            <a  href="https://crisisrelief.un.org/t/ukraine" target="_blank" rel="noopener noreferrer" class="btn-learn-more">Donate Here</a>
-            </center>
-          </div>
+          
         </div>
 
       </div>
     </section><!-- End About Us Section -->
-    <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials section-bg">
-      <div class="container">
-
-        <div class="section-title" data-aos="fade-up">
-          <h2>Past Feedback</h2>
-          <p>Feeback from past students</p>
-        </div>
-
-        <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
-          <div class="swiper-wrapper">
-
-            <div class="swiper-slide">
-              <div class="testimonial-wrap">
-                <div class="testimonial-item">
-                  <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" class="testimonial-img" alt="">
-                  <h3>Andres Martin</h3>
-                  <h4>Middle School Student</h4>
-                  <p>
-                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    This conference was so much fun I'd be happy to come again sometime in the future!
-                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                  </p>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-wrap">
-                <div class="testimonial-item">
-                  <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" class="testimonial-img" alt="">
-                  <h3>Emily Brown</h3>
-                  <h4>Middle School Student</h4>
-                  <p>
-                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Wow, this was one of the best online conference experiences I've ever had. The team, the delegates, the secretariat, all top notch!
-                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                  </p>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-wrap">
-                <div class="testimonial-item">
-                  <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" class="testimonial-img" alt="">
-                  <h3>Jena Karlis</h3>
-                  <h4>Middle School Student</h4>
-                  <p>
-                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    I can't wait for the next conference. Thx for the memories and fun!
-                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                  </p>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-wrap">
-                <div class="testimonial-item">
-                  <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" class="testimonial-img" alt="">
-                  <h3>Matt Brandon</h3>
-                  <h4>High School Student</h4>
-                  <p>
-                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Incredibly beginner-friendly for a first-timer like I was. Great conference overall!
-                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                  </p>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-wrap">
-                <div class="testimonial-item">
-                  <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" class="testimonial-img" alt="">
-                  <h3>Jamie Smith</h3>
-                  <h4>Middle School Student</h4>
-                  <p>
-                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Thanks, I finally won my first award! I'm so excited to partipate in future ZMUN events!
-                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                  </p>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
-          </div>
-          <div class="swiper-pagination"></div>
-        </div>
-
-      </div>
-    </section><!-- End Testimonials Section -->
+   
 
   
  
