--- a/profile1.html
+++ b/profile1.html
@@ -57,21 +57,21 @@
     <div data-aos="fade-up" data-aos-delay="100">
     <section id="portfolio-details" class="portfolio-details">
       <div class="container" data-aos="fade-down" data-aos-delay="100">
-        <div class="row gy-4">
+        <div class="row gy-5">
 
-          <div class="col-lg-5">
+          <div class="col-lg-4">
             <div class="portfolio-details-slider swiper">
               <br>
               <div class="swiper-wrapper align-items-center">
 
-                <img src="https://itzxizz.github.io/ZMUN/ethan.jpg" style="border-radius:25px">
+                <img src="./assets/img/team/ethan.jpg" style="border-radius:25px">
 
               </div>
               <div class="swiper-pagination"></div>
             </div>
           </div>
 
-          <div class="col-lg-7">
+          <div class="col-lg-8">
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
@@ -80,8 +80,7 @@
               <div class="portfolio-info">
               <h2>About Ethan Curtis</h2>
               <p>
-                Ethan is a highschool student currently studying on Vancouver Island and is overjoyed to be this year's Secretary General and Chief of technology at BCMUN. Ever since his first conference in 2019, Ethan's love for Model United Nations has continually grown. Attending and staffing conferences has resulted in memories that will last him a lifetime. Outside of MUN, Ethan spends his time practicing and competing in tennis tournaments, playing the violin and piano, programming, and enjoying music. Ethan is looking forward towards administering BCMUN's second iteration and can’t wait to meet everyone!
-              </p>
+                Ethan is a high school student, currently studying on Vancouver Island, and is overjoyed to be this year's Secretary General of BCMUN. Attending his first conference in 2019, Ethan was completely silent. Only after many failures and learning experiences, has Ethan manifested his love for Model United Nations, gaining the confidence necessary to engage in high-level debates. As the Secretary General of BCMUN, Ethan is hoping to help beginner delegates gain a similar set of memories and friendships to those he has accumulated over the past few years. Outside the exhilarating world of MUN, Ethan spends his time practicing and competing in tennis tournaments, playing the violin and piano, programming, and enjoying music. Ethan is looking forward to this year’s conference and can’t wait to meet everyone virtually!              </p>
             </div>
           </div>
 
@@ -95,7 +94,6 @@
 
   <footer>
     <center>
-    <br>
     <p>Designed By Ethan Curtis | &copy;	2022 All rights reserved.</p>
     </center>
   </footer>
