--- a/profile2.html
+++ b/profile2.html
@@ -77,7 +77,7 @@
               <div class="portfolio-info">
               <h2>About Michael Xie</h2>
               <p>
-                Michael is a student sudying on Vancouver Island, attempting to make his community a better place. With this conference, Michael hopes to develop new skills and gain experience. Michael can typically be found at the golf course or in his room playing his guitar, which he is extremely passionate about. Michael is very excited to be a secretariat member at BCMUN 2022!
+                Michael is a highschool student currently studying in Vancouver and is overjoyed to be this year's Secretary General. After attending his first conference in 2019, Michael’s love for Model United Nations has unceasingly grown. Attending and staffing conferences has resulted in memories that he will cherish for a lifetime. Outside of MUN, Michael spends his time practicing and competing in golf, playing the guitar, and reading books. Michael is looking forward to overseeing the second iteration of BCMUN and is ecstatic to meet everyone!
               </p>
             </div>
           </div>
