--- a/header.html
+++ b/header.html
@@ -12,8 +12,8 @@
         <ul>
           <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
           <li><a class="nav-link scrollto active" href="committees.html">Committees</a></li>
-          <li><a class="nav-link scrollto active" href="https://eu.jotform.com/form/221957349386066">Staff Applications</a></li>
-          <li><a class="nav-link scrollto active" >Delegate Registration (Comming Soon)</a></li>
+          <li><a class="nav-link scrollto active" href="https://form.jotform.com/221977001120039">Delegate Registration</a></li>
+          <li><a class="nav-link scrollto active" target="_blank" href="./assets/img/Official BCMUN 2023 Schedule.pdf">Schedule</a></li>
           <li><a class="nav-link scrollto active" href="delegate.html">Conference Video-Call Rooms</a></li>
 
           
