--- a/committees.html
+++ b/committees.html
@@ -103,7 +103,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  UNHCR - Beginner/Intermidiate Committee <br><br>
+                  UNHCR - Beginner/Intermediate Committee <br><br>
                   Topic: Displacement of Afghanistan Citizens
                 </h5>
                 <p>
@@ -119,7 +119,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  UNODC - Beginner/Intermidiate Committee <br><br>
+                  UNODC - Beginner/Intermediate Committee <br><br>
                   Topic: Legalization of Marijuana and Drug Related Crime
                 </h5>
                 <p>
