--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="row">
         <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1 data-aos="fade-up">BCMUN has opened delegate registration</h1>
-          <h2 data-aos="fade-up" data-aos-delay="400">Conference Dates: January 21th and 22nd</h2>
+          <h2 data-aos="fade-up" data-aos-delay="400">Conference Dates: January 21th and 22nd, 2023</h2>
           <div data-aos="fade-up" data-aos-delay="800">
             <a href="https://form.jotform.com/221977001120039" class="btn-get-started scrollto">Register here</a>
           </div>
