--- a/EU.html
+++ b/EU.html
@@ -83,11 +83,10 @@
                   
                   <div class="detail-box">
                     <h5>
-                      UNSC Committee Details <br><br>
+                      EU Committee Details <br><br>
                     </h5>
                     <p>
-                      <img src="https://static.businessworld.in/article/article_extra_large_image/1659699244_J45TQf_china_tainwan.jpeg" width="80%" style="border-radius: 12px" data-aos="fade-up">
-                      <br><br>
+                      <img src="https://s.marketwatch.com/public/resources/images/MW-HW846_big_te_ZG_20191212143527.jpg" width="50%" style="border-radius: 12px" data-aos="fade-up">
                     </p>
                     <br>
                     <element id="hero">
