--- a/UNHCR.html
+++ b/UNHCR.html
@@ -83,10 +83,10 @@
                   
                   <div class="detail-box">
                     <h5>
-                      UNSC Committee Details <br><br>
+                      UNHCR Committee Details <br><br>
                     </h5>
                     <p>
-                      <img src="https://static.businessworld.in/article/article_extra_large_image/1659699244_J45TQf_china_tainwan.jpeg" width="80%" style="border-radius: 12px" data-aos="fade-up">
+                      <img src="https://i.dawn.com/primary/2021/08/6112a82c37a8a.jpg" width="60%" style="border-radius: 12px" data-aos="fade-up">
                       <br><br>
                     </p>
                     <br>
