--- a/committees.html
+++ b/committees.html
@@ -91,7 +91,7 @@
                 </h5>
                 <br>
                 <element id="hero">
-                  <a href="" class="btn-get-started scrollto">About Committee</a>
+                  <a href="UNSC.html" class="btn-get-started scrollto">About Committee</a>
                   </element>  
                
               </div>
@@ -109,7 +109,7 @@
                 </h5>
                 <br>
                 <element id="hero">
-                  <a href="" class="btn-get-started scrollto">About Committee</a>
+                  <a href="UNHCR.html" class="btn-get-started scrollto">About Committee</a>
                   </element>  
               </div>
             </div>
@@ -126,7 +126,7 @@
                 </h5>
                 <br>
                 <element id="hero">
-                  <a href="" class="btn-get-started scrollto">About Committee</a>
+                  <a href="UNODC.html" class="btn-get-started scrollto">About Committee</a>
                   </element>  
               </div>
             </div>
@@ -151,7 +151,7 @@
                 </h5>
                 <br>
                 <element id="hero">
-                  <a href="" class="btn-get-started scrollto">About Committee</a>
+                  <a href="EU.html" class="btn-get-started scrollto">About Committee</a>
                   </element>  
                
               </div>
@@ -169,7 +169,7 @@
                 </h5>
                 <br>
                 <element id="hero">
-                  <a href="" class="btn-get-started scrollto">About Committee</a>
+                  <a href="UNCSTD.html" class="btn-get-started scrollto">About Committee</a>
                   </element>  
               </div>
             </div>
