--- a/UNODC.html
+++ b/UNODC.html
@@ -83,11 +83,11 @@
                   
                   <div class="detail-box">
                     <h5>
-                      UNSC Committee Details <br><br>
+                      UNODC Committee Details <br><br>
                     </h5>
                     <p>
-                      <img src="https://static.businessworld.in/article/article_extra_large_image/1659699244_J45TQf_china_tainwan.jpeg" width="80%" style="border-radius: 12px" data-aos="fade-up">
-                      <br><br>
+                      <img src="https://www.connecticutcriminallawyer.com/images/easyblog_images/2020/06/Hartford-criminal-lawyer-min.jpg" width="100%" style="border-radius: 12px" data-aos="fade-up">
+            
                     </p>
                     <br>
                     <element id="hero">
