--- a/committees.html
+++ b/committees.html
@@ -181,12 +181,12 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  HCC - Invite Only Committee <br><br>
-                  Topic: **Topic only available to delegates
+                  WHO - Beginner/Intermediate Committee <br><br>
+                  Topic: 
                 </h5>
                 <br>
                 <element id="hero">
-                  <a href="" class="btn-get-started scrollto">About Committee</a>
+                  <a href="WHO.html" class="btn-get-started scrollto">About Committee</a>
                   </element>  
               </div>
             </div>
