--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div class="member" data-aos="fade-up" data-aos-delay="400">
               <div class="member-img">
                 <a href="profile4.html">
-                <img src="./assets/img/team/anna.png" width=500px height=500px class="img-fluid" alt="">
+                <img src="./assets/img/Staff image.jpg" width=500px height=500px class="img-fluid" alt="">
                 <div class="social">
                 </div>
                 </a>
@@ -146,7 +146,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Annalise Politis</h4>
+                <h4>Kevin Zhou</h4>
                 <span>Chief of Staff</span>
               </div>
             </div>
