--- a/committees.html
+++ b/committees.html
@@ -182,7 +182,8 @@
               <div class="detail-box">
                 <h5>
                   WHO - Beginner/Intermediate Committee <br><br>
-                  Topic: 
+                  Topic: The Origins and Impact of COVID-19
+
                 </h5>
                 <br>
                 <element id="hero">
