--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </div>
                 </a>
                 <div class="social">
-                  <a href="https://www.instagram.com/anna_bananaa27/" target="_blank" rel="noopener noreferrer" class="btn-learn-more"><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.instagram.com/veryfatdog12345/" target="_blank" rel="noopener noreferrer" class="btn-learn-more"><i class="bi bi-instagram"></i></a>
                 </div>
               </div>
               <div class="member-info">
