--- a/EU.html
+++ b/EU.html
@@ -90,7 +90,7 @@
                     </p>
                     <br>
                     <element id="hero">
-                      <a href="" class="btn-get-started scrollto">Background Guide (Avaiable Soon)</a>
+                      <a href="BCMUN 2023 EU Background Guide.docx.pdf" class="btn-get-started scrollto">Background Guide (Avaiable Soon)</a>
                       </element> 
                       <br><br>
                       <element id="hero">
