--- a/WHO.html
+++ b/WHO.html
@@ -91,7 +91,7 @@
                     </p>
                     <br>
                     <element id="hero">
-                      <a href="BCMUN 2023 WHO Background Guide.docx.pdf" class="btn-get-started scrollto">Background Guide (Avaiable Soon)</a>
+                      <a href="BCMUN 2023 WHO Background Guide.docx.pdf" class="btn-get-started scrollto">Background Guide</a>
                       </element> 
                       <br><br>
                       <element id="hero">
