--- a/staff.html
+++ b/staff.html
@@ -92,7 +92,7 @@
             <div class="member" data-aos="fade-up" data-aos-delay="400">
               <div class="member-img">
                 <a href="staff3.html">
-                <img src="./assets/img/staff images/3.jpg" width=400px height=400px class="img-fluid" alt="">
+                <img src="./assets/img/staff images/3.JPG" width=400px height=400px class="img-fluid" alt="">
                 </a>
               </div>
               <div class="member-info">
