--- a/profile5.html
+++ b/profile5.html
@@ -77,7 +77,7 @@
               <div class="portfolio-info">
               <h2>About Cindy Yang</h2>
               <p>
-                A grade 9 student currently attending Crofton House School, Cindy is delighted to serve as ZMUN 2022’s USG delegate affairs and USG IT. Ever since walking into her first MUN conference at CAHSMUN horizons 2021, she has become fond of the competitive yet collaborative aspects Model UN has to offer. Through several conferences she has delegated in, new friendships formed, as well as increased knowledge of both recent and past events in the world, Cindy’s passion for Model UN has never stopped growing. Beyond Model UN, Cindy enjoys playing badminton and volleyball with her friends, racing down snowing mountains on her skis, and spending time with her dog and birds. She looks forward to making an unforgettable experience for everyone attending ZMUN 2022.              </p>
+                A grade 9 student currently attending Crofton House School, Cindy is delighted to serve as BCMUN 2023’s USG delegate affairs and USG IT. Ever since walking into her first MUN conference at CAHSMUN horizons 2021, she has become fond of the competitive yet collaborative aspects Model UN has to offer. Through several conferences she has delegated in, new friendships formed, as well as increased knowledge of both recent and past events in the world, Cindy’s passion for Model UN has never stopped growing. Beyond Model UN, Cindy enjoys playing badminton and volleyball with her friends, racing down snowing mountains on her skis, and spending time with her dog and birds. She looks forward to making an unforgettable experience for everyone attending BCMUN 2022.              </p>
             </div>
           </div>
 
