--- a/profile7.html
+++ b/profile7.html
@@ -77,7 +77,7 @@
               <div class="portfolio-info">
               <h2>About Amanda Lee</h2>
               <p>
-                Amanda is currently a student at Crofton House School. She is incredibly excited to be serving on the secretariat for the second iteration of ZMUN! Her first Model United Nations conference was at the beginning of grade 8 and since has been to multiple conferences. When not at a conference, Amanda can be found baking or running. Amanda is so excited for ZMUN 2022 and having the opportunity to meet everyone!
+                Amanda is currently a student at Crofton House School. She is incredibly excited to be serving on the secretariat for the second iteration of BCMUN! Her first Model United Nations conference was at the beginning of grade 8 and since has been to multiple conferences. When not at a conference, Amanda can be found baking or running. Amanda is so excited for BCMUN 2022 and having the opportunity to meet everyone!
               </div>
           </div>
 
