--- a/profile1.html
+++ b/profile1.html
@@ -73,7 +73,7 @@
 
           <div class="col-lg-8">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h3>Get to know the secretariat</h3>
               <ul>
               </ul>
             </div>
