--- a/profile3.html
+++ b/profile3.html
@@ -82,7 +82,7 @@
 
           <div class="col-lg-9">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h3>Get to know the secretariat</h3>
               <ul>
               </ul>
             </div>
