--- a/profile4.html
+++ b/profile4.html
@@ -72,7 +72,7 @@
 
           <div class="col-lg-9">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h3>Get to know the secretariat</h3>
               <ul>
               </ul>
             </div>
